# fastapi_trigger_flow

./: .env_sample  Dockerfile  Makefile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  kind-config.yaml  main.py  prod.docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2025_07_13_1605-93725381c116_add_a_column.py  2025_07_21_0914-462bc17bf296_create_api_source_model.py  2025_07_21_0922-ad8be3fc51c0_create_api_source_model.py  2025_07_21_0924-4c2df2c060e4_create_api_source_model.py  2025_07_21_0926-22427f6d35d4_create_api_source_model.py  2025_07_21_0930-3708dce1fe45_create_api_source_model.py  2025_07_21_0933-3e9541f5e8ae_create_api_source_model.py  2025_07_21_0936-7bfc8181fed8_create_api_source_model.py  2025_07_21_0936-bfda7cb9a531_create_api_source_model.py  2025_07_21_1102-2697693da2ed_create_api_source_model.py  2025_07_21_1250-c354220c95d8_init.py  2025_07_22_0911-0f9e53e5c0bc_create_users.py  2025_07_22_1317-33b2cdc68331_create_users.py  2025_07_22_1317-d616a0a60b05_create_users.py  2025_07_22_1445-2110f245472f_create_users.py  2025_07_22_1445-d45289381de1_create_users.py  2025_07_23_1435-c075ab4d6f92_init.py  2025_07_24_0940-cf39c977fe2d_delete_cond_for_source.py  2025_07_27_1459-fd7315c4a11f_add_field.py  2025_07_27_1501-8732484c7a5e_add_field.py  2025_07_29_1434-20748feaf4ab_add_user_id_ro_not.py  2025_09_17_0928-0cd0f7fbae55_.py  (+3 more)
app/service_2/: Dockerfile  main.py  pyproject.toml
k8s/: ingress.yaml  redis.yaml
nginx_conf/: default.conf
(+208 files in other folders)
